# gpui-nix-hello-example

./: Cargo.toml  flake.nix
src/: main.rs
