cargo-features = ["codegen-backend"]

[package]
name = "gpui-test"
version = "0.1.0"
edition = "2024"

[dependencies.gpui]
git = "https://github.com/happenslol/zed"
branch = "dev"
default-features = false
features = ["wayland", "http_client"]

[profile.dev]
debug = 1
codegen-backend = "cranelift"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
